tests/baselines/reference/spreadOfObjectLiteralAssignableToIndexSignature.errors.txt
spreadOfObjectLiteralAssignableToIndexSignature.ts(5,30): error TS2367: This comparison appears to be unintentional because the types 'Record<never, never>' and 'undefined' have no overlap.
spreadOfObjectLiteralAssignableToIndexSignature.ts(7,30): error TS2367: This comparison appears to be unintentional because the types 'Record<never, never>' and 'undefined' have no overlap.
spreadOfObjectLiteralAssignableToIndexSignature.ts(11,38): error TS2367: This comparison appears to be unintentional because the types 'Record<never, never>' and 'undefined' have no overlap.
spreadOfObjectLiteralAssignableToIndexSignature.ts(13,38): error TS2367: This comparison appears to be unintentional because the types 'Record<never, never>' and 'undefined' have no overlap.


==== spreadOfObjectLiteralAssignableToIndexSignature.ts (4 errors) ====
    const foo: Record<never, never> = {} // OK
    
    interface RecordOfRecords extends Record<keyof any, RecordOfRecords> {}
    const recordOfRecords: RecordOfRecords = {}
    recordOfRecords.propA = {...(foo !== undefined ? {foo} : {})} // OK
                                 ~~~~~~~~~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'Record<never, never>' and 'undefined' have no overlap.
    recordOfRecords.propB = {...(foo && {foo})} // OK
    recordOfRecords.propC = {...(foo !== undefined && {foo})} // error'd in 3.7 beta, should be OK
                                 ~~~~~~~~~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'Record<never, never>' and 'undefined' have no overlap.
    
    interface RecordOfRecordsOrEmpty extends Record<keyof any, RecordOfRecordsOrEmpty | {}> {}
    const recordsOfRecordsOrEmpty: RecordOfRecordsOrEmpty = {}
    recordsOfRecordsOrEmpty.propA = {...(foo !== undefined ? {foo} : {})} // OK
                                         ~~~~~~~~~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'Record<never, never>' and 'undefined' have no overlap.
    recordsOfRecordsOrEmpty.propB = {...(foo && {foo})} // OK
    recordsOfRecordsOrEmpty.propC = {...(foo !== undefined && {foo})} // OK
                                         ~~~~~~~~~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'Record<never, never>' and 'undefined' have no overlap.